kustomizations/traefik/production/service.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: traefik-endpoint-polaris
  namespace: traefik
spec:
  ports:
    - protocol: TCP
      port: 8006
      targetPort: 8006
---
kind: Service
apiVersion: v1
metadata:
  name: traefik-endpoint-homeassistant
  namespace: traefik
spec:
  ports:
    - protocol: TCP
      port: 8123
      targetPort: 8123
---
kind: Service
apiVersion: v1
metadata:
  name: traefik-endpoint-canopus
  namespace: traefik
spec:
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
