kustomizations/traefik/production/ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-service-ingresses
  namespace: default
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`cloud.allanandvaia.com`)
      kind: Rule
      middlewares:
        - name: traefik-custom-headers
          namespace: default
      priority: 10
      services:
        - name: nextcloud
          namespace: nextcloud
          port: 8080
          scheme: http 
    - match: Host(`dns.k8s.allanshomelab.com`)
      kind: Rule
      middlewares:
        - name: traefik-custom-headers
          namespace: default
      priority: 10
      services:
        - name: pihole-web
          namespace: pihole
          port: 80
          scheme: http 
    - match: Host(`grafana.allanshomelab.com`)
      kind: Rule
      middlewares:
        - name: traefik-custom-headers
          namespace: default
      priority: 10
      services:
        - name: kube-prometheus-stack-grafana
          namespace: kube-prometheus-stack
          port: 80
          scheme: http 
    - match: Host(`prometheus.k8s.allanshomelab.com`)
      kind: Rule
      middlewares:
        - name: traefik-custom-headers
          namespace: default
      priority: 10
      services:
        - name: kube-prometheus-stack-prometheus
          namespace: kube-prometheus-stack
          port: 9090
          scheme: http
    - match: Host(`alerts.k8s.allanshomelab.com`)
      kind: Rule
      middlewares:
        - name: traefik-custom-headers
          namespace: default
      priority: 10
      services:
        - name: kube-prometheus-stack-alertmanager
          namespace: kube-prometheus-stack
          port: 9093
          scheme: http
    - match: Host(`guacamole.allanshomelab.com`)
      kind: Rule
      middlewares:
        - name: traefik-custom-headers
          namespace: default
      priority: 10
      services:
        - name: guacamole
          namespace: guacamole
          port: 35100
          scheme: http 
    - match: Host(`wiki.allanandvaia.com`)
      kind: Rule
      middlewares:
        - name: traefik-custom-headers
          namespace: default
      priority: 10
      services:
        - name: wikijs
          namespace: wikijs
          port: 80
          scheme: http 
    - match: Host(`api.nogeeksbrewing.com`)
      kind: Rule
      middlewares:
        - name: traefik-custom-headers
          namespace: default
      priority: 10
      services:
        - name: no-geeks-brewing-graphql-api
          namespace: ngb
          port: 8080
          scheme: http  
    - match: Host(`nogeeksbrewing.com`)
      kind: Rule
      middlewares:
        - name: traefik-custom-headers
          namespace: default
      priority: 10
      services:
        - name: no-geeks-brewing-nextjs-gui
          namespace: ngb
          port: 3000
          scheme: http 
    - match: Host(`www.nogeeksbrewing.com`)
      kind: Rule
      middlewares:
        - name: traefik-custom-headers
          namespace: default
      priority: 10
      services:
        - name: no-geeks-brewing-nextjs-gui
          namespace: ngb
          port: 3000
          scheme: http 
    - match: Host(`tautulli.k8s.allanshomelab.com`)
      kind: Rule
      middlewares:
        - name: traefik-custom-headers
          namespace: default
      priority: 10
      services:
        - name: tautulli
          namespace: tautulli
          port: 8181
          scheme: http 
    - match: Host(`rancher.k8s.allanshomelab.com`)
      kind: Rule
      middlewares:
        - name: traefik-custom-headers
          namespace: default
      priority: 10
      services:
        - name: rancher
          namespace: cattle-system
          port: 80
          scheme: http 
    - match: Host(`vault.allanshomelab.com`)
      kind: Rule
      middlewares:
        - name: traefik-custom-headers
          namespace: default
      priority: 10
      services:
        - name: vaultwarden
          namespace: vaultwarden
          port: 35550
          scheme: http 
    - match: Host(`vault.129monroe.com`)
      kind: Rule
      middlewares:
        - name: traefik-custom-headers
          namespace: default
      priority: 10
      services:
        - name: vaultwarden
          namespace: vaultwarden
          port: 35550
          scheme: http 
    - match: Host(`vault.allanandvaia.com`)
      kind: Rule
      middlewares:
        - name: traefik-custom-headers
          namespace: default
      priority: 10
      services:
        - name: vaultwarden
          namespace: vaultwarden
          port: 35550
          scheme: http 
    - match: Host(`portainer.k8s.allanshomelab.com`)
      kind: Rule
      middlewares:
        - name: traefik-custom-headers
          namespace: default
      priority: 10
      services:
        - name: portainer
          namespace: portainer
          port: 9000
          scheme: http 
    - match: Host(`gitops.allanshomelab.com`)
      kind: Rule
      middlewares:
        - name: traefik-custom-headers
          namespace: default
      priority: 10
      services:
        - name: argocd-server
          namespace: argocd
          port: 443
          scheme: https   
    - match: Host(`tools.k8s.allanshomelab.com`)
      kind: Rule
      middlewares:
        - name: traefik-custom-headers
          namespace: default
      priority: 10
      services:
        - name: it-tools
          namespace: it-tools
          port: 80
          scheme: http   
    - match: Host(`129monroe.com`)
      kind: Rule
      middlewares:
        - name: authentik
          namespace: default
        - name: traefik-custom-headers
          namespace: default
      priority: 10
      services:
        - name: nginx
          namespace:  nginx
          port: 80
          scheme: http        
    - kind: Rule
      match: "Host(`129monroe.com`) && PathPrefix(`/outpost.goauthentik.io/`)"
      priority: 15
      services:
        - kind: Service
          # Or, to use an external Outpost, create an ExternalName service and reference that here.
          # See https://kubernetes.io/docs/concepts/services-networking/service/#externalname
          name: ak-outpost-authentik-embedded-outpost
          port: 9000
    - match: Host(`www.129monroe.com`)
      kind: Rule
      middlewares:
        - name: authentik
          namespace: default
        - name: traefik-custom-headers
          namespace: default
      priority: 10
      services:
        - name: nginx
          namespace:  nginx
          port: 80
          scheme: http        
    - kind: Rule
      match: "Host(`www.129monroe.com`) && PathPrefix(`/outpost.goauthentik.io/`)"
      priority: 15
      services:
        - kind: Service
          # Or, to use an external Outpost, create an ExternalName service and reference that here.
          # See https://kubernetes.io/docs/concepts/services-networking/service/#externalname
          name: ak-outpost-authentik-embedded-outpost
          port: 9000
    - match: Host(`www.allanandvaia.com`)
      kind: Rule
      middlewares:
        - name: authentik
          namespace: default
        - name: traefik-custom-headers
          namespace: default
      priority: 10
      services:
        - name: nginx
          namespace:  nginx
          port: 80
          scheme: http        
    - kind: Rule
      match: "Host(`www.allanandvaia.com`) && PathPrefix(`/outpost.goauthentik.io/`)"
      priority: 15
      services:
        - kind: Service
          # Or, to use an external Outpost, create an ExternalName service and reference that here.
          # See https://kubernetes.io/docs/concepts/services-networking/service/#externalname
          name: ak-outpost-authentik-embedded-outpost
          port: 9000
    - match: Host(`allanandvaia.com`)
      kind: Rule
      middlewares:
        - name: authentik
          namespace: default
        - name: traefik-custom-headers
          namespace: default
      priority: 10
      services:
        - name: nginx
          namespace:  nginx
          port: 80
          scheme: http        
    - kind: Rule
      match: "Host(`allanandvaia.com`) && PathPrefix(`/outpost.goauthentik.io/`)"
      priority: 15
      services:
        - kind: Service
          # Or, to use an external Outpost, create an ExternalName service and reference that here.
          # See https://kubernetes.io/docs/concepts/services-networking/service/#externalname
          name: ak-outpost-authentik-embedded-outpost
          port: 9000
    - match: Host(`allanshomelab.com`)
      kind: Rule
      middlewares:
        - name: authentik
          namespace: default
        - name: traefik-custom-headers
          namespace: default
      priority: 10
      services:
        - name: nginx
          namespace:  nginx
          port: 80
          scheme: http        
    - kind: Rule
      match: "Host(`allanshomelab.com`) && PathPrefix(`/outpost.goauthentik.io/`)"
      priority: 15
      services:
        - kind: Service
          # Or, to use an external Outpost, create an ExternalName service and reference that here.
          # See https://kubernetes.io/docs/concepts/services-networking/service/#externalname
          name: ak-outpost-authentik-embedded-outpost
          port: 9000
    - match: Host(`www.allanshomelab.com`)
      kind: Rule
      middlewares:
        - name: authentik
          namespace: default
        - name: traefik-custom-headers
          namespace: default
      priority: 10
      services:
        - name: nginx
          namespace:  nginx
          port: 80
          scheme: http        
    - kind: Rule
      match: "Host(`www.allanshomelab.com`) && PathPrefix(`/outpost.goauthentik.io/`)"
      priority: 15
      services:
        - kind: Service
          # Or, to use an external Outpost, create an ExternalName service and reference that here.
          # See https://kubernetes.io/docs/concepts/services-networking/service/#externalname
          name: ak-outpost-authentik-embedded-outpost
          port: 9000
    - match: Host(`home.allanandvaia.com`)
      kind: Rule
      middlewares:
        - name: traefik-custom-headers
          namespace: default
      priority: 10
      services:
        - name: traefik-endpoint-homeassistant
          namespace:  traefik
          port: 8123
          scheme: http        
    - match: Host(`canopus.hosts.allanshomelab.com`)
      kind: Rule
      middlewares:
        - name: traefik-custom-headers
          namespace: default
      priority: 10
      services:
        - name: traefik-endpoint-canopus
          namespace:  traefik
          port: 8000
          scheme: http        
    - match: Host(`polaris.hosts.allanshomelab.com`)
      kind: Rule
      middlewares:
        - name: traefik-custom-headers
          namespace: default
      priority: 10
      services:
        - name: traefik-endpoint-polaris
          namespace:  traefik
          port: 8006
          scheme: https        
    - match: Host(`rigel.hosts.allanshomelab.com`)
      kind: Rule
      middlewares:
        - name: traefik-custom-headers
          namespace: default
      priority: 10
      services:
        - name: traefik-endpoint-rigel
          namespace:  traefik
          port: 80
          scheme: http               
    - match: Host(`bellatrix.syncthing.allanshomelab.com`)
      kind: Rule
      middlewares:
        - name: traefik-custom-headers
          namespace: default
      priority: 10
      services:
        - name: traefik-endpoint-syncthing-bellatrix
          namespace:  traefik
          port: 8384
          scheme: http        
    - match: Host(`mimosa.syncthing.allanshomelab.com`)
      kind: Rule
      middlewares:
        - name: traefik-custom-headers
          namespace: default
      priority: 10
      services:
        - name: traefik-endpoint-syncthing-mimosa
          namespace:  traefik
          port: 8384
          scheme: http        
    - match: Host(`rigel.syncthing.allanshomelab.com`)
      kind: Rule
      middlewares:
        - name: traefik-custom-headers
          namespace: default
      priority: 10
      services:
        - name: traefik-endpoint-syncthing-rigel
          namespace:  traefik
          port: 20910
          scheme: http        
    - match: Host(`photos.allanandvaia.com`)
      kind: Rule
      middlewares:
        - name: traefik-custom-headers
          namespace: default
      priority: 10
      services:
        - name: traefik-endpoint-immich
          namespace:  traefik
          port: 2283
          scheme: http        
    - match: Host(`radarr.docker.allanshomelab.com`)
      kind: Rule
      middlewares:
        - name: authentik
          namespace: default
        - name: traefik-custom-headers
          namespace: default
      priority: 10
      services:
        - name: traefik-endpoint-radarr
          namespace:  traefik
          port: 31300
          scheme: http        
    - kind: Rule
      match: "Host(`radarr.docker.allanshomelab.com`) && PathPrefix(`/outpost.goauthentik.io/`)"
      priority: 15
      services:
        - kind: Service
          # Or, to use an external Outpost, create an ExternalName service and reference that here.
          # See https://kubernetes.io/docs/concepts/services-networking/service/#externalname
          name: ak-outpost-authentik-embedded-outpost
          port: 9000
    - match: Host(`sonarr.docker.allanshomelab.com`)
      kind: Rule
      middlewares:
        - name: authentik
          namespace: default
        - name: traefik-custom-headers
          namespace: default
      priority: 10
      services:
        - name: traefik-endpoint-sonarr
          namespace:  traefik
          port: 31200
          scheme: http        
    - kind: Rule
      match: "Host(`sonarr.docker.allanshomelab.com`) && PathPrefix(`/outpost.goauthentik.io/`)"
      priority: 15
      services:
        - kind: Service
          # Or, to use an external Outpost, create an ExternalName service and reference that here.
          # See https://kubernetes.io/docs/concepts/services-networking/service/#externalname
          name: ak-outpost-authentik-embedded-outpost
          port: 9000
